   files with a separator in its ASSIGN name (either directly or via
   environment), see the new runtime options
   COB_SEQ_CONCAT_NAME (defaulting to false) and COB_SEQ_CONCAT_SEP

** Initial "testing support" of CODE-SET clause to convert between ASCII and
   EBCDIC on READ/WRITE/REWRITE for sequential and line-sequential files

** TODO - More to add

* Changes that potentially effects existing programs:

** ALLOCATE statement: earlier versions of GnuCOBOL initialized the memory
   (to binary zero) if the INITIALIZED clause was not specified,
   this isn't done anymore so if you need the memory to be initialized
   specify that explicit in the source and recompile

** LINE SEQUENTIAL files, data validation: in case of non-printable data
   a READ may result in status 09 and WRITE may error with status 71;
   to disable this validation see the new runtime option COB_LS_VALIDATE
   to restore old behavior and to increase performance on WRITE;
   if LS_NULLS is active and invalid data (bad encoded or missing encoding)
   is found io status 71 is returned

** LINE SEQUENTIAL files, handling of records that are "too long":
   in case of "overflowing" records previous versions of GnuCOBOL cut the
   data, set io status 00 and skipped the file until the next line
   terminator is found;
   the default changed (per COBOL 2022 and other compilers) so the data is
   returned as "multiple" records and a warning (status 06) is issued;
   setting COB_LS_SPLIT = false will have the old behaviour of truncating
   the record, but will now set status 04

** FUNCTION EXCEPTION-LOCATION: if the source raising an exception was not
   compiled with location information this function previously returned
   a single space; GnuCOBOL now always returns the module name, a procedure-
   name " " and the source (line) identifier "0"

** FUNCTIONs NUMVAL, NUMVAL-C, NUMVAL-F: if the argument does not match the
   argument rules previous versions returned zero; now invalid data is skipped;