@@ -220,7 +220,7 @@ cob_gen_optim (const enum cb_optim val)
 		return;
 
 	case COB_GET_NUMDISP:
-		output_storage ("static int COB_NOINLINE");
+		output_storage ("static int COB_INLINE COB_A_INLINE");
 		output_storage ("cob_get_numdisp (const void *data, const int size)");
 		output_storage ("{");
 		output_storage ("	register const unsigned char	*p;");
@@ -236,14 +236,19 @@ cob_gen_optim (const enum cb_optim val)
 		return;
 
 	case COB_GET_NUMDISPS:
-		output_storage ("static int COB_NOINLINE");
+		output_storage ("static int COB_INLINE COB_A_INLINE");
 		output_storage ("cob_get_numdisps (const void *data, const int size)");
 		output_storage ("{");
 		output_storage ("	register const unsigned char	*p;");
 		output_storage ("	register int	n;");
 		output_storage ("	register int 	val = 0;");
 		output_storage ("	p = (const unsigned char *)data;");
-		output_storage ("	for (n = 0; n < size; ++n, ++p) {");
+		output_storage ("	for (n = 0; n < val; ++n, ++p) {");
+		output_storage ("		if (*p > '0' && *p <= '9')");
+		output_storage ("			break;");
+		output_storage ("	}");
+		output_storage ("	val = 0;");
+		output_storage ("	for (; n < size; ++n, ++p) {");
 		output_storage ("		val = (val * 10)");
 		output_storage ("		    + (*p & 0x0F);");
 		output_storage ("	}");
